# postgres-crudy-rs

./: Cargo.toml
src/: crud_helper.rs  crudy_error.rs  data_error.rs  lib.rs
